--- a/index.html
+++ b/index.html
@@ -4,7 +4,103 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>BMI App - Landing Page</title>
-      <link rel="stylesheet" href="style.css">
+      <style>
+          /* General Styles */
+          body {
+              font-family: Arial, sans-serif;
+              line-height: 1.6;
+              margin: 0;
+              padding: 0;
+          }
+
+          header {
+              background-color: #34495e;
+              color: #fff;
+              text-align: center;
+              padding: 20px;
+          }
+
+          header h1 {
+              margin: 0;
+          }
+
+          main {
+              padding: 40px;
+          }
+
+          h2 {
+              color: #2980b9;
+              margin-bottom: 20px;
+          }
+
+          p {
+              margin-bottom: 15px;
+          }
+
+          ul {
+              list-style: disc;
+              padding-left: 30px;
+          }
+
+          /* Testimonials */
+          blockquote {
+              border-left: 3px solid #2980b9;
+              padding-left: 20px;
+          }
+
+          /* Call-to-Action (CTA) */
+          .download-btn {
+              display: inline-block;
+              background-color: #2980b9;
+              color: #fff;
+              padding: 10px 20px;
+              text-decoration: none;
+              margin: 10px;
+              border-radius: 5px;
+          }
+
+          /* Footer */
+          footer {
+              background-color: #34495e;
+              color: #fff;
+              text-align: center;
+              padding: 10px;
+          }
+
+          .cta {
+            display: flex;
+            justify-content: center;
+          }
+          .cta a {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #34495e;
+            color: #4CAF50;
+            font-size: 24px;
+            text-decoration: none;
+            border-radius: 10px;
+            transition: background-color 0.3s ease;
+          }
+          .cta a:hover {
+            background-color: #1c6c72;
+          }
+
+          /* Responsive Styles */
+          @media (max-width: 768px) {
+              header h1 {
+                  font-size: 24px;
+              }
+
+              main {
+                  padding: 20px;
+              }
+
+              .download-btn {
+                  font-size: 14px;
+                  padding: 8px 16px;
+              }
+          }
+      </style>
   </head>
   <body>
       <header>
