--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
               padding: 40px;
           }
 
+          img {
+              position: absolute;
+              display: centre;
+          }
+        
           h2 {
               color: #2980b9;
               margin-bottom: 20px;
@@ -108,7 +113,7 @@
       </header>
 
       <main>
-          <img src="image.jpg">
+          <img src="dumbbell.jpg">
           <section id="hero">
               <h2>Achieve Your Health Goals with our Comprehensive BMI Tracker</h2>
               <p>Are you ready to take control of your health and achieve your ideal body weight? Look no further! The BMI Tracker App is here to support you on your journey towards a healthier lifestyle.</p>
