--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <h2>Get Started Today!</h2>
               <p>Ready to embark on your health transformation? Use BMI Tracker App now and start your journey towards a healthier you!</p>
               <div class="cta">
-                <a href="bmap.netlify.app">Get Started</a>
+                <a href="https://bmap.netlify.app">Get Started</a>
               </div>
           </section>
       </main>
