--- a/index.html
+++ b/index.html
@@ -31,19 +31,14 @@
           main {
               padding: 40px;
           }
-
-          img {
-              position: absolute;
-              display: centre;
-          }
         
           h2 {
               color: #2980b9;
               margin-bottom: 20px;
           }
 
-          p {
-              color: #2980b5;
+          p li {
+              color: #fff;
               margin-bottom: 15px;
           }
 
